--- a/CSS/main.css
+++ b/CSS/main.css
@@ -11,6 +11,7 @@ html, body {
   font-size: 15px;
 }
 
+
 p {
   color: hsla(0, 0%, 100%, 0.75);
   line-height: 24px;
@@ -109,5 +110,37 @@ main {
 }
 
 @media only screen and (max-width: 800px){
-
+  main {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 3rem;
   }
+
+  .sedans {
+  background-color: hsl(31, 77%, 52%);
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 0px;
+ }
+
+  .luxury {
+    background-color: hsl(179, 100%, 13%);
+    border-bottom-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+    border-top-right-radius: 0px;
+  }
+
+  p {
+    color: hsla(0, 0%, 100%, 0.75);
+    line-height: 24px;
+    padding: 0.5rem 0 1rem 0;
+  }
+
+  .card {
+    padding: 40px;
+    height: 350px;
+    width: 200px;
+  }
+
+}
