--- a/CSS/main.css
+++ b/CSS/main.css
@@ -109,6 +109,10 @@ main {
   text-decoration: none;
 }
 
+.attribution p {
+  color: black;
+}
+
 @media only screen and (max-width: 800px){
   main {
     flex-direction: column;
